--- a/app/views/layouts/_styles.html.erb
+++ b/app/views/layouts/_styles.html.erb
@@ -6,6 +6,7 @@
 <%= stylesheet_link_tag '320andUp/600.css',  :media => 'only screen and (min-width: 600px)' %>
 <%= stylesheet_link_tag '320andUp/768.css',  :media => 'only screen and (min-width: 768px)' %>
 <%= stylesheet_link_tag '320andUp/992.css',  :media => 'only screen and (min-width: 992px)' %>
+<%= stylesheet_link_tag '320andUp/1382.css',  :media => 'only screen and (min-width: 1382px)' %>
 <!-- For Retina displays -->
 <%= stylesheet_link_tag '320andUp/2x.css',  :media => 'only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5)' %>
 
