--- a/app/views/donkey/index.html.erb
+++ b/app/views/donkey/index.html.erb
@@ -3,4 +3,6 @@
 	<li>second item</li>
 	<li>third item</li>
 	<li>fourth item</li>
-</ul
+</ul>
+
+<p>wow, there's even some content down here... </p>
